fix: slightly wider cards; fix workerpool inter-row grid spacing (cells vertically smashed)

--- a/platform/dashboard/src/client/components/Queue.scss
+++ b/platform/dashboard/src/client/components/Queue.scss
@@ -4,7 +4,7 @@
 
 .codeflare--workqueues {
   display: table;
-  line-height: 0.75em;
+  line-height: 0.875em;
 
   .codeflare--workqueues-row {
     display: table-row;
